# copick-mcp

./: CHANGELOG.md  README.md  pyproject.toml  release-please.config.json
.github/workflows/: release-please.yml
src/copick/mcp/: main.py
src/copick_mcp/: __init__.py  cli_introspection.py  main.py
